--- a/automation/templates/automation/dashboard.html
+++ b/automation/templates/automation/dashboard.html
@@ -107,7 +107,7 @@
         }
     </style>
 
-    {% if request.user.is_superuser %}
+    {% if user.is_superuser %}
     <!-- Shortcuts Section -->
     <div class="row">
         <div class="col-md-8 mb-4">
