--- a/data_manager/templates/base.html
+++ b/data_manager/templates/base.html
@@ -62,6 +62,7 @@
                         <a class="nav-link" href="{% url 'coupon_list' %}"><i class="bi bi-ticket-detailed"></i>
                             Kuponlarım</a>
                     </li>
+                    {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-warning" href="{% url 'workflow_list' %}">
                             <i class="bi bi-lightning-charge-fill me-1"></i> OTOMASYON
@@ -85,6 +86,7 @@
                                         class="bi bi-cloud-download me-2"></i>İçe Aktar</a></li>
                         </ul>
                     </li>
+                    {% endif %}
                     {% endif %}
                 </ul>
                 <div class="d-flex">
