--- a/data_manager/templates/base.html
+++ b/data_manager/templates/base.html
@@ -68,6 +68,11 @@
                             <i class="bi bi-lightning-charge-fill me-1"></i> OTOMASYON
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold text-info" href="{% url 'sync_center' %}">
+                            <i class="bi bi-arrow-repeat me-1"></i> SYNC MERKEZİ
+                        </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="bi bi-tools"></i> Araçlar
